--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container-fluid">
     <div class="card">
-        <img src="../images/image-qr-code.png" alt="qr-image" style="width:100%" class="card-img">
+        <img src="./images/image-qr-code.png" alt="qr-image" style="width:100%" class="card-img">
         <h3>Improve your frontend skills by building projects</h3>
         <p class="paragraph-text">Scan the QR code to visit the frontend Mentor and take your coding skills to the next level</p>
       </div>
